crates/rv/tests/integration_tests/shell_test/snapshots/integration_tests__shell__env_test__fish_succeeds.snap
---
source: crates/rv/tests/integration_tests/shell/env_test.rs
expression: output.normalized_stdout()
---
set -ge RUBY_ROOT RUBY_ENGINE RUBY_VERSION RUBYOPT GEM_HOME GEM_PATH
set -gx PATH ""
