crates/rv/tests/integration_tests/shell_test/snapshots/integration_tests__shell__env_test__shell_env_clears_ruby_and_gem_vars_when_no_rubies_available.snap
---
source: crates/rv/tests/integration_tests/shell/env_test.rs
expression: output.normalized_stdout()
---
unset RUBY_ROOT RUBY_ENGINE RUBY_VERSION RUBYOPT GEM_HOME GEM_PATH
export PATH=/tmp/bin
hash -r
